# ls2k0300_peripheral_library

./: .gitignore  2K0300引脚功能复用表.md  CMakeLists.txt  CMakePresets.json  README.md  cross.cmake  久久派引脚功能复用表.md  久久派拓展板板框.epro  先锋派引脚功能复用表.md  米联派引脚功能复用表.md  蜂鸟派引脚功能复用表.md
lib/: GPIO.h  PwmController.h  atim_pwm.h  encoder.h  pwm_atim.h  pwm_gtim.h  register.h
main/: CMakeLists.txt  main.cpp
mydriver/arch/loongarch/boot/dts/loongson/: 2k0300-pinctrl.dtsi  loongson_2k0300.dtsi  loongson_2k0300_pai_99_wifi.dts
mydriver/drivers/media/: mt9v034.c
mydriver/drivers/pwm/: Kconfig  Makefile  pwm-ls-atim.c  pwm-ls-gtim.c
src/: GPIO.cpp  PwmController.cpp  atim_pwm.cpp  encoder.cpp  main.cpp  pwm_atim.cpp  pwm_gtim.cpp  register.cpp
